<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightgrey">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomlayout"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:fillViewport="false"
        android:isScrollContainer="true"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logos"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logos"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/ContactusLabel"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cvinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/ContactusLabel"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/cvinfo"
                android:orientation="horizontal"
                android:weightSum="0">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvmobile_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cvinfo"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/calluslbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/callus1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/btncall"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/ic_call"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/callus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/calluslbl"
                            android:layout_centerHorizontal="true"
                            android:autoLink="phone"
                            android:padding="10dp"
                            android:text="99999 99999"
                            android:textColor="@color/ColorPrimary"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cvinfo"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toRightOf="@+id/cvmobile_no"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/lblemail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/emailid1"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/btnemail"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/ic_email"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/emailid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/lblemail"
                            android:layout_centerHorizontal="true"
                            android:autoLink="email"
                            android:padding="10dp"
                            android:text="support@textile.com"
                            android:textColor="@color/ColorPrimary"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btnfacebook1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_facebook"
            android:onClick="gotofb" />

        <Button
            android:id="@+id/btntwitter1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_twitter"
            android:onClick="gototwitter" />

        <Button
            android:id="@+id/btninsta1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_insta"
            android:onClick="gotoinsta" />

        <Button
            android:id="@+id/btnblog1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_blog"
            android:onClick="gotoblog" />

    </LinearLayout>


</RelativeLayout>